styled result dropdown and moved the toggle visibility logic into the event delegator because of a bug

--- a/styles/base.css
+++ b/styles/base.css
@@ -198,19 +198,6 @@ h2 {
     --category-color-2: #E74EEA;
 }
 
-/* Helper classes */
-
-.underline {
-    text-decoration: underline;
-    text-underline-offset: 3px;
-    text-decoration-thickness: 1px;
-    text-decoration-color: #07C1DA;
-  }
-
-  .hidden {
-    display: none;
-  }
-
 /* Waves */
 
 .waves {
