--- a/styles/end.css
+++ b/styles/end.css
@@ -11,7 +11,7 @@
 }
 
 .result-title {
-  margin-bottom: 1rem;
+  margin-bottom: .4rem;
   text-shadow: 1px 1px 2px var(--body-text-shadow);
 }
 
@@ -26,16 +26,29 @@
     padding: 1rem;
 }
 
+#dialog .result-list {
+    height: auto;
+    width: auto;
+    overflow: visible;
+}
+
 .result-item {
     padding: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 0 1.2rem;
     background: linear-gradient(to right,#2E84EE, #05BCEF);
     color: white;
     border-radius: 13px;
-    display: grid;
-    grid-template-columns: auto 1fr auto;
-    grid-template-rows:auto auto;
-    gap: 0 1.2rem;
-    align-items: center;
+    overflow: hidden;
+    transition: box-shadow .4s;
+
+    &:hover {
+      cursor: pointer;
+      box-shadow: 0 0 6px white;
+    }
 }
 
 .result-item--wrong {
@@ -52,12 +65,12 @@
 }
 
 .result-item__question-number {
-    grid-row: span 2;
     background-color:#D4EBFF;
     color: #4659B6;
     border-radius: 50%;
     width: 3rem;
-    aspect-ratio: 1/1;
+    height: 3rem;
+    font-size: 1.6rem;
     font-weight: 700;
     text-align: center;
     display: flex;
@@ -65,55 +78,52 @@
     align-items: center;
 }
 
-.result-item__question-text {
-    margin-top: -1rem;
-    display: none;
-    padding: 1rem;
-    background-color: #a3e5ff96;
-    color: black;
-    border-radius: 13px;
-    align-items: center;
+.result-item__answer {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
+}
+
+.result-item__correct-answer {
+  font-size: 1.6rem;
 }
 
 .result-item__selected-answer {
     font-weight: 600;
     font-size: 1.2rem;
+    font-style: italic;
 }
 
-.result-item__correct-answer {
-  font-size: 1.6rem;
-  font-style: italic;
 
-}
-
-.result-item__question-number {
-  font-size: 1.6rem;
-}
-
-.result-item__question-number,
-.result-item__selected-answer, 
 .result-item__icon {
     align-items: center;
     display: flex;
+    gap: .5rem;
 }
 
-.result-item__correct-answer {
+.result-item__question-text {
+  display: none;
+  flex: 1 100%;
+  margin-top: .5rem;
+  padding: .5rem 1rem;
+  font-size: 1.3rem;
   text-align: left;
+  background: rgba(255, 255, 255, 0.151);
+  border: 1px solid rgba(255, 255, 255, 0.194);
+  border-radius: 10px;
 }
 
 .result-item__icon {
-    grid-column: 3;
-    grid-row: 1 / 3;
     margin-right: .5rem;
     font-size: 2rem;
 }
 .result-item__arrow {
-  grid-column: 4;
-  grid-row: 1 / 3;
-  margin-right: .5rem;
-  font-size: 2rem;
-  height: 2rem;
-  width: 2rem;
+    margin-right: .5rem;
+    font-size: 2rem;
+    height: 2rem;
+    width: 2rem;
 }
 
 
